--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,13 +15,18 @@
             </div>
         
           </mat-toolbar>
-          <mat-sidenav-container fxFlexFill class="example-container">
+          <mat-sidenav-container fxFlexFill class="example-container ">
         
             <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over" opened="false" fxHide.gt-sm="true">
-              <div fxLayout="column">
-                  <a mat-button routerLinkActive="active-link" routerLink="/home" [routerLinkActiveOptions]="{exact: true} ">Home</a>
-                  <a mat-button routerLinkActive="active-link" routerLink="/upload" [routerLinkActiveOptions]="{exact: true} ">Upload</a>
-              </div>
+              <mat-nav-list class="navigation-list">
+                <a class="navigation-item" mat-list-item routerLink="/home" routerLinkActive="active">
+                  <mat-icon class="material-icons">home</mat-icon><span class="navigation-item-label">Home</span>
+                </a>
+                <mat-divider class="navigation-divider"></mat-divider>
+                <a class="navigation-item" mat-list-item routerLink="/upload" routerLinkActive="active">
+                  <mat-icon class="material-icons">add_circle</mat-icon><span class="navigation-item-label">Upload</span>
+                </a>
+         </mat-nav-list>
             </mat-sidenav>
             <mat-sidenav-content fxFlexFill>
               Content
